--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "body-parser": "^1.19.0",
     "celebrate": "^12.1.1",
     "express": "^4.17.1",
+    "express-pino-logger": "^5.0.0",
+    "helmet": "^3.23.3",
     "joi": "^14.3.1",
     "mongoose": "^5.9.21",
     "nconf": "^0.10.0",
