feat: add health check route

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,14 @@
       "allowForLoopAfterthoughts": true
     }],
     "max-len": ["error", 80],
-    "strict": "off"
+    "strict": "off",
+    "no-console": "off",
+    "no-restricted-syntax": [
+        "error",
+        {
+            "selector": "CallExpression[callee.object.name='console'][callee.property.name!=/^(log|warn|error|info|trace)$/]",
+            "message": "Unexpected property on console object was called"
+        }
+    ]
   }
 }
