--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "Test interview for ze delivery",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "lint": "eslint .",
+    "coverage": "nyc npm run test",
+    "coverage:html": "nyc --reporter=html npm run test",
+    "mocha": "NODE_ENV=test mocha --recursive",
+    "mocha:watch": "watch 'npm run mocha' --interval 0.1 .",
+    "test": "npm run lint && npm run mocha",
+    "release": "npm run test && standard-version"
   },
   "keywords": [
     "interview",
@@ -28,6 +35,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "coverage": "^0.4.1",
+    "eslint": "^7.3.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "mocha": "^8.0.1",
