--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "eslint-plugin-import": "^2.22.0",
     "mocha": "^8.0.1",
     "nodemon": "^2.0.4",
+    "nyc": "^15.1.0",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
-    "standard-version": "^8.0.0"
+    "standard-version": "^8.0.0",
+    "watch": "^1.0.2"
   }
 }
