--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Elisson Silva <nossilesilva@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "celebrate": "^12.1.1",
     "express": "^4.17.1",
